[metadata]
name = compresso
url = https://github.com/seung-lab/compresso
summary = compresso algorithm variant based on work by Matejek et al.
description_content_type = text/markdown
description_file = README.md
author = William Silversmith
author_email = ws9@princeton.edu
home_page = https://github.com/seung-lab/compresso
license = License :: OSI Approved :: MIT License
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering  

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages = compresso
